--- a/youtube excercise/youtube.html
+++ b/youtube excercise/youtube.html
@@ -6,75 +6,21 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-  <style>
-
-    p{
-      font-family: Roboto, Arial;
-      margin-top: 0;
-      margin-bottom: 0;
-    }
-
-    .search-box{
-      font-size: 18px;
-      font-family: monospace;
-      margin: 10px;
-      padding: 4px;
-      display: block;
-    }
-
-    .video-grid{
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      column-gap: 20px;
-      row-gap: 30px;
-    }
-
-    .thumbnails{
-      width: 100%;
-    }
-
-
-    .video-item{
-    }
-
-    .video-info-grid{
-     display: grid;
-     grid-template-columns: 50px 1fr;
-    }
-
-    .channel-logo{
-      vertical-align: top;
-    }
-    .video-info{
-      margin-left: 8px;
-    }
-    .profile-picture{
-      width: 100%;
-      border-radius: 40px;
-    }
-    .thum-row{
-      margin-bottom: 10px;
-    }
-    .video-title{
-      margin-top: 0px;
-      font-size: 18px;
-      font-weight: 500;
-      line-height: 22px;
-      margin-bottom: 18px;
-    }
-    .video-author{
-      font-size: 14sp;
-      color: rgb(96, 96, 96);
-      margin-bottom: 4px;
-    }
-    .video-stats{
-      font-size: 14sp;
-      color: rgb(96, 96, 96);
-    }
-  </style>
+  
+  <link rel="stylesheet" href="css/general.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/video.css">
 </head>
-<body>
-  <input class="search-box" type="text" placeholder="Search">
+<body class="body">
+  <div class="header-section">
+    <div class="left-section">boom</div>
+    <div class="middle-section">
+      <input class="search-box" type="text" placeholder="Search">
+    </div>
+    <div class="right-section">
+      boom
+    </div>
+  </div>
   <div class="video-grid">
     <div
     class="video-item"
