basic operators in js

--- a/Js Learning/index.html
+++ b/Js Learning/index.html
@@ -13,6 +13,7 @@
         <p id="age"></p>
         <p id="isMarried"></p>
         <p id="salary"></p>
+        <p id="operators"></p>
 
         <script src="index.js">
         </script>
