accept user input Js

--- a/Js Learning/index.html
+++ b/Js Learning/index.html
@@ -14,8 +14,18 @@
         <p id="isMarried"></p>
         <p id="salary"></p>
         <p id="operators"></p>
-
-        <script src="index.js">
-        </script>
+        <p id="userInput"></p>
+        <button id="acceptButton">Accept User Input With Window.prompt</button>
+        <br>
+        <br>
+        <label>Enter User Input</label>
+        <br>
+        <input id="userName">
+        <br>
+        <input id="password">
+        <br>
+        <button id="submitBtn">Submit User Datalis</button>
+        <p id="outPut"></p>
+        <script src="index.js"></script>
     </body>
 </html>
