Js stopwatch Css added

--- a/Js Learning/excercise stopwatch/index.html
+++ b/Js Learning/excercise stopwatch/index.html
@@ -7,11 +7,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>JS Stopwatch App</h1>
+        <h1 id="headerTitle">JS Stopwatch App</h1>
         <p id="showValue">0</p>
-        <button id="resetBtn">Reset</button>
-        <button id="startBtn">Start</button>
-        <button id="stopBtn">Stop</button>
+        <div id="btnContainerDiv">
+            <button id="resetBtn">Reset</button>
+            <button id="startBtn">Start</button>
+            <button id="stopBtn">Stop</button>
+        </div>
         <script src="index.js"></script>
     </body>
 </html>
