random number generator

--- a/Js Learning/excercise random number generator/index.html
+++ b/Js Learning/excercise random number generator/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>JS Stopwatch</title>
+        <title>JS Random Number Generator</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1 id="headerTitle">JS Random Number Generaotr</h1>
+        <h1 id="headerTitle">JS Random Number Generator</h1>
         <p id="showValue">___</p>
         <div id="btnContainerDiv">
             <button id="generateRandomBtn">Generate Random</button>
