--- a/Js Learning/index.html
+++ b/Js Learning/index.html
@@ -26,6 +26,6 @@
         <br>
         <button id="submitBtn">Submit User Datalis</button>
         <p id="outPut"></p>
-        <script src="index.js"></script>
+        <script type="module" src="index.js"></script>
     </body>
 </html>
