DOM navigations & changing elements via js

--- a/Js Learning/index.html
+++ b/Js Learning/index.html
@@ -26,6 +26,21 @@
         <br>
         <button id="submitBtn">Submit User Datalis</button>
         <p id="outPut"></p>
+        <ul id="fruits">
+            <li>Apple</li>
+            <li>Banana</li>
+            <li>Orange</li>
+        </ul>
+        <ul id="vegtables">
+            <li>Potato</li>
+            <li>Tomato</li>
+            <li>Kakarot</li>
+        </ul>
+        <ul id="oils">
+            <li>Coconut</li>
+            <li>Mustad</li>
+            <li>Ghee</li>
+        </ul>
         <script type="module" src="index.js"></script>
     </body>
 </html>
